<resources>
    <string name="app_name">AplikasiPresensi</string>
    <string name="email">Email</string>
    <string name="nrp">NRP</string>
    <string name="nik">NIK</string>
    <string name="hint_nrp">Contoh : 1272009</string>
    <string name="hint_nik">Contoh : 581051</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="login_as_teacher">Login as Teacher</string>
    <string name="login_as_student">Login as Student</string>
    <string name="teacher_course_code">Course Code -</string>
    <string name="teacher_course_name">Name#1 </string>
    <string name="teacher_course_type">Course type</string>
    <string name="teacher_course_type2">(teori - praktikum)</string>
    <string name="teacher_course_room">Course room</string>
    <string name="teacher_course_time"> - start time</string>
    <string name="attendace_course_name">Course Code - Name</string>
    <string name="attendace_course_type">Course type</string>
    <string name="accept_response">Accept Response</string>
    <string name="warning">Warning: opening a response means you open a new session for your class. Turn off the response means your student cannot submit their attendance for the session</string>
    <string name="welcome">Welcome,\t</string>
    <string name="student">Student: 20/21</string>
    <string name="student_id">Student ID #1</string>
    <string name="student_name">Student Name #1</string>
    <string name="input_course_code">Masukkan Course Code</string>
    <string name="search">Search</string>
    <string name="start">START</string>
    <string name="cource_code">Course Code</string>
    <string name="cource_name">Course Name</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>