<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/margin_medium_small_size_11">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_course_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_course_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_teacher_course_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensans_bold"
                    android:text="@string/teacher_course_code"
                    android:textColor="@color/Nebula"
                    android:textSize="@dimen/text_large_size_20" />

                <TextView
                    android:id="@+id/tv_teacher_course_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensans_bold"
                    android:text="@string/teacher_course_name"
                    android:textColor="@color/Nebula"
                    android:textSize="@dimen/text_large_size_20" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensans_regular"
                    android:text="@string/teacher_course_type"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_xmedium_size_16" />

                <TextView
                    android:id="@+id/tv_teacher_course_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensans_regular"
                    android:text="@string/teacher_course_type2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_xmedium_size_16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_teacher_course_room"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensans_regular"
                    android:text="@string/teacher_course_room"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_xmedium_size_16" />

                <TextView
                    android:id="@+id/tv_teacher_course_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensans_regular"
                    android:text="@string/teacher_course_time"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_xmedium_size_16" />
            </LinearLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_start_send_email"
            android:layout_width="@dimen/margin_xxlarge_size_89"
            android:layout_height="@dimen/margin_xmedium_size_34"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_round_rectangle"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/start"
            android:textSize="@dimen/text_xmedium_size_16" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>