<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.teacherAuth.views.TeacherLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_medium_size_16"
        android:layout_marginRight="@dimen/margin_medium_size_16"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/nik"
            android:textColor="@color/black"
            android:textSize="@dimen/text_medium_size_14" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_nik"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small_size_5"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/red_error"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/et_nik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_rectangle"
                android:fontFamily="@font/quicksand_medium"
                android:hint="@string/hint_nik"
                android:inputType="number"
                android:textColorHint="@color/black"
                android:textSize="@dimen/text_xmedium_size_16" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small_size_5"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="@dimen/text_medium_size_14" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small_size_5"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/red_error"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_rectangle"
                android:fontFamily="@font/quicksand_medium"
                android:inputType="textPassword"
                android:textColorHint="@color/black"
                android:textSize="@dimen/text_xmedium_size_16" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_xmedium_42"
            android:layout_marginTop="@dimen/margin_medium_small_size_10"
            android:background="@drawable/bg_button"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_xmedium_size_16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_login_as_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/margin_medium_small_size_12"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/login_as_student"
            android:textColor="@color/blue_hicolleagues"
            android:textSize="@dimen/text_xmedium_size_17" />
    </LinearLayout>
</LinearLayout>